--- a/library-ui/package.json
+++ b/library-ui/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/reach__router": "^1.3.0",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
